# R-Type

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  build_linux.sh  build_windows.bat  install.sh  mapCreation.sh  package_linux.bat  package_linux.sh
doc/: CONTRIBUTING.md
doc/ECS/: HowToCreateAComponent.md  HowToCreateASystem.md  README.md
doc/Network/: Exchange.md  README.md  RFC.md
maps/: explication.txt  map1.txt  map10.txt  map4.txt  map5.txt  map6.txt  map7.txt  map8.txt  map9.txt
src/client/: ErrorHandler.cpp  ErrorHandler.hpp  main.cpp
src/client/Game/: Game.cpp  Game.hpp
src/client/loader/: VectorContainer.cpp  VectorContainer.hpp
src/client/loader/animations/: ASpritesAnimations.cpp  ASpritesAnimations.hpp  ParallaxAnimation.cpp  ParallaxAnimation.hpp
src/common/: OstreamHelper.cpp  OstreamHelper.hpp
src/common/ECS/: Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Types.hpp
src/common/ECS/Components/: AComponent.cpp  AComponent.hpp  IComponent.cpp  IComponent.hpp
src/common/ECS/Components/Augments/: Augments.cpp  Augments.hpp
src/common/ECS/Components/Bullet/: BulletComponent.cpp  BulletComponent.hpp
src/common/ECS/Components/Button/: ButtonComponent.cpp  ButtonComponent.hpp
src/common/ECS/Components/Controllable/: ControllableComponent.cpp  ControllableComponent.hpp
src/common/ECS/Components/Enemy/: EnemyComponent.cpp  EnemyComponent.hpp
src/common/ECS/Components/Explosion/: Explosion.cpp  Explosion.hpp
src/common/ECS/Components/Health/: Health.cpp  Health.hpp
src/common/ECS/Components/Input/: InputComponent.cpp  InputComponent.hpp
src/common/ECS/Components/Item/: Item.cpp  Item.hpp
src/common/ECS/Components/Laser/: LaserComponent.cpp  LaserComponent.hpp  LaserLoadingComponent.cpp  LaserLoadingComponent.hpp
src/common/ECS/Components/Network/: NetworkComponent.cpp  NetworkComponent.hpp
src/common/ECS/Components/Position/: PositionComponent.cpp  PositionComponent.hpp
src/common/ECS/Components/Rectable/: Rectable.cpp  Rectable.hpp
src/common/ECS/Components/Renderable/: Renderable.cpp  Renderable.hpp
src/common/ECS/Components/Scale/: ScaleComponent.cpp  ScaleComponent.hpp
src/common/ECS/Components/SendOverNetwork/: SendOverNetworkComponent.cpp  SendOverNetworkComponent.hpp
src/common/ECS/Components/Shield/: ShieldComponent.cpp  ShieldComponent.hpp
src/common/ECS/Components/Text/: TextComponent.cpp  TextComponent.hpp
src/common/ECS/Components/Velocity/: Velocity.cpp  Velocity.hpp
src/common/ECS/System/: ASystem.cpp  ASystem.hpp  ISystem.cpp  ISystem.hpp
src/common/ECS/System/AugmentSystem/: AugmentSystem.cpp  AugmentSystem.hpp
src/common/ECS/System/ClickableSystem/: ClickableSystem.cpp  ClickableSystem.hpp
src/common/Network/: ANetwork.cpp  ANetwork.hpp  Byte.cpp  Byte.hpp  Client.cpp  Client.hpp  EntitySerializer.cpp  EntitySerializer.hpp  INetwork.hpp  Packet.cpp  Packet.hpp  RFC.hpp  Server.cpp  Server.hpp
src/common/Utils/: Path.hpp  SoundLoader.cpp  SoundLoader.hpp  SpriteLoader.cpp  SpriteLoader.hpp
src/common/map/: MapGenerating.cpp  MapGenerating.hpp
src/common/map/mapCreation/: CreationMap.cpp  CreationMap.hpp  mainMapCreation.cpp
src/common/map/test/: displayEnemies.cpp  mainTest.cpp  my.h
src/server/: main.cpp
src/server/Controller/: AController.cpp  AController.hpp  Controllers.hpp  EntityController.cpp  EntityController.hpp  Helper.cpp  Helper.hpp  IController.hpp
test/: CMakeLists.txt  rtype_test
test/common/ECS/: TestEntity.cpp  TestEntityManager.cpp  TestEntityManager.hpp
test/common/ECS/Components/Button/: TestButton.cpp
test/common/ECS/Components/Controllable/: TestControllableComponent.cpp
test/common/ECS/Components/Network/: TestNetworkComponent.cpp
test/common/ECS/Components/Position/: TestPosition.cpp  TestPosition.hpp
test/common/ECS/Components/Rectable/: TestRectable.cpp
test/common/ECS/Components/Renderable/: TestRenderable.cpp  TestRenderable.hpp
test/common/ECS/Components/Scale/: TestScale.cpp
test/common/ECS/Components/SendOverNetwork/: TestSendOverNetworkComponent.cpp
test/common/ECS/Components/Velocity/: TestVelocity.cpp  TestVelocity.hpp
test/common/ECS/System/EnemySystem/: TestEnemySystem.cpp
test/common/ECS/System/MovableSystem/: TestMovableSystem.cpp
test/common/ECS/System/PlayerSystem/: TestPlayerSystem.cpp
test/common/ECS/System/ScaleSystem/: TestScaleSystem.cpp
test/common/Network/: TestByte.cpp  TestByte.hpp
test/temp/System/: TestASystem.cpp  TestASystem.hpp
(+22 files in other folders)
